# grepr

./: Cargo.toml  README.md  mk-outs.sh
src/: lib.rs  main.rs
tests/: cli.rs
