[package]
name = "grepr"
version = "0.1.0"
edition = "2021"
description = "Rust grep"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.79"
clap = { version = "4.4.18", features = ["derive"] }
regex = "1.10.3"
sys-info = "0.9.1"
walkdir = "2.4.0"

[dev-dependencies]
assert_cmd = "2.0.13"
predicates = "3.1.0"
rand = "0.8.5"
